force-app/main/default/objects/Dun_and_Bradstreet_Company__c/Dun_and_Bradstreet_Company__c.object-meta.xml
<CustomObject>
    <label>Dun and Bradstreet Company</label>
    <nameField>
        <label>DUNS Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dun and Bradstreet Companies</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>