force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/Accounting_Firm__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Firm__c</fullName>
    <label>Accounting Firm</label>
    <length>32</length>
    <type>Text</type>
</CustomField>