force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/Annual_Sales_Volume_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Annual_Sales_Volume_Indicator__c</fullName>
    <label>Annual Sales Volume Indicator</label>
    <length>30</length>
    <type>Text</type>
</CustomField>