force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/Bank_DUNS__c.field-meta.xml
<CustomField>
    <fullName>Bank_DUNS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank DUNS</label>
    <referenceTo>Dun_and_Bradstreet_Company__c</referenceTo>
    <relationshipLabel>Bank Client DUNS</relationshipLabel>
    <relationshipName>Dun_and_Bradstreet_Companies2</relationshipName>
    <type>Lookup</type>
</CustomField>