force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/Bank_DUNS_Number__c.field-meta.xml
<CustomField>
    <fullName>Bank_DUNS_Number__c</fullName>
    <label>Bank DUNS Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>