force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/CompanyCurrencyIsoCode__c.field-meta.xml
<CustomField>
    <fullName>CompanyCurrencyIsoCode__c</fullName>
    <label>Local Currency ISO Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>