force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/CountryAccessCode__c.field-meta.xml
<CustomField>
    <fullName>CountryAccessCode__c</fullName>
    <label>International Dialing Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>