force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/CurrencyCode__c.field-meta.xml
<CustomField>
    <fullName>CurrencyCode__c</fullName>
    <label>Local Currency Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>