force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/D_B_Report_Date__c.field-meta.xml
<CustomField>
    <fullName>D_B_Report_Date__c</fullName>
    <label>D&amp;B Report Date</label>
    <type>Date</type>
</CustomField>