force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Company Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>