force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/DomesticUltimateBusinessName__c.field-meta.xml
<CustomField>
    <fullName>DomesticUltimateBusinessName__c</fullName>
    <label>Domestic Ultimate Business Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>