force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/DomesticUltimateDUNS__c.field-meta.xml
<CustomField>
    <fullName>DomesticUltimateDUNS__c</fullName>
    <description>DomesticUltimateDunsNumber</description>
    <label>Domestic Ultimate DUNS</label>
    <length>9</length>
    <type>Text</type>
</CustomField>