force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/DUNS_Number_ExternalID__c.field-meta.xml
<CustomField>
    <fullName>DUNS_Number_ExternalID__c</fullName>
    <externalId>true</externalId>
    <label>DUNS Number (External ID)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>