force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/EmployeeQuantityGrowthRate__c.field-meta.xml
<CustomField>
    <fullName>EmployeeQuantityGrowthRate__c</fullName>
    <label>Employee Growth</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>