force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/Employees_Here__c.field-meta.xml
<CustomField>
    <fullName>Employees_Here__c</fullName>
    <label>Employees Here</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>