force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/EmployeesHereReliability__c.field-meta.xml
<CustomField>
    <fullName>EmployeesHereReliability__c</fullName>
    <label>Number of Employees - Location Indicator</label>
    <length>30</length>
    <type>Text</type>
</CustomField>