force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/EmployeesTotalReliability__c.field-meta.xml
<CustomField>
    <fullName>EmployeesTotalReliability__c</fullName>
    <label>Number of Employees - Total Indicator</label>
    <length>30</length>
    <type>Text</type>
</CustomField>