force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/FamilyMembers__c.field-meta.xml
<CustomField>
    <fullName>FamilyMembers__c</fullName>
    <label>Number of Business Family Members</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>