force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/FifthNaics__c.field-meta.xml
<CustomField>
    <fullName>FifthNaics__c</fullName>
    <label>Fifth NAICS Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>