force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/FifthSic8__c.field-meta.xml
<CustomField>
    <fullName>FifthSic8__c</fullName>
    <label>Fifth SIC8 Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>