force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/FifthSic__c.field-meta.xml
<CustomField>
    <fullName>FifthSic__c</fullName>
    <label>Fifth SIC Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>