force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/FifthSicDesc__c.field-meta.xml
<CustomField>
    <fullName>FifthSicDesc__c</fullName>
    <label>Fifth SIC Description</label>
    <length>80</length>
    <type>Text</type>
</CustomField>