force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/FipsMsaCode__c.field-meta.xml
<CustomField>
    <fullName>FipsMsaCode__c</fullName>
    <label>FIPS MSA Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>