force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/Fortune_500_Rank__c.field-meta.xml
<CustomField>
    <fullName>Fortune_500_Rank__c</fullName>
    <label>Fortune 500 Rank</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>