force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/FourthNaics__c.field-meta.xml
<CustomField>
    <fullName>FourthNaics__c</fullName>
    <label>Fourth NAICS Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>