force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/FourthNaicsDesc__c.field-meta.xml
<CustomField>
    <fullName>FourthNaicsDesc__c</fullName>
    <label>Fourth NAICS Description</label>
    <length>120</length>
    <type>Text</type>
</CustomField>