force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/FourthSic8__c.field-meta.xml
<CustomField>
    <fullName>FourthSic8__c</fullName>
    <label>Fourth SIC8 Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>