force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/FourthSic__c.field-meta.xml
<CustomField>
    <fullName>FourthSic__c</fullName>
    <label>Fourth SIC Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>