force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/FourthSicDesc__c.field-meta.xml
<CustomField>
    <fullName>FourthSicDesc__c</fullName>
    <label>Fourth SIC Description</label>
    <length>80</length>
    <type>Text</type>
</CustomField>