force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/GlobalUltimateBusinessName__c.field-meta.xml
<CustomField>
    <fullName>GlobalUltimateBusinessName__c</fullName>
    <label>Global Ultimate Business Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>