force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/HQ_DUNS__c.field-meta.xml
<CustomField>
    <fullName>HQ_DUNS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HQ DUNS</label>
    <referenceTo>Dun_and_Bradstreet_Company__c</referenceTo>
    <relationshipLabel>Location DUNS</relationshipLabel>
    <relationshipName>Dun_and_Bradstreet_Companies1</relationshipName>
    <type>Lookup</type>
</CustomField>