force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/HQ_Duns_Number__c.field-meta.xml
<CustomField>
    <fullName>HQ_Duns_Number__c</fullName>
    <label>HQ Duns Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>