force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/ImportExportAgent__c.field-meta.xml
<CustomField>
    <fullName>ImportExportAgent__c</fullName>
    <label>Import/Export</label>
    <length>60</length>
    <type>Text</type>
</CustomField>