force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/IncludedInSnP500__c.field-meta.xml
<CustomField>
    <fullName>IncludedInSnP500__c</fullName>
    <label>S&amp;P 500</label>
    <length>10</length>
    <type>Text</type>
</CustomField>