force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/Legacy_SLX_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_SLX_ID__c</fullName>
    <externalId>true</externalId>
    <label>Legacy SLX ID</label>
    <length>12</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>