force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/Legacy_SLX_Update__c.field-meta.xml
<CustomField>
    <fullName>Legacy_SLX_Update__c</fullName>
    <label>Legacy SLX Update</label>
    <type>Date</type>
</CustomField>