force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/Legacy_SLX_Update_Result__c.field-meta.xml
<CustomField>
    <fullName>Legacy_SLX_Update_Result__c</fullName>
    <label>Legacy SLX Update Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>