force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/LegalStatus__c.field-meta.xml
<CustomField>
    <fullName>LegalStatus__c</fullName>
    <label>Legal Structure</label>
    <length>30</length>
    <type>Text</type>
</CustomField>