force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/Location_Status__c.field-meta.xml
<CustomField>
    <fullName>Location_Status__c</fullName>
    <label>Location Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>