force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/LocationStatus__c.field-meta.xml
<CustomField>
    <fullName>LocationStatus__c</fullName>
    <label>Location Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>