force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/MailingCity__c.field-meta.xml
<CustomField>
    <fullName>MailingCity__c</fullName>
    <label>Mailing City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>