force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/MailingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>MailingPostalCode__c</fullName>
    <label>Mailing Postal Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>