force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/MailingState__c.field-meta.xml
<CustomField>
    <fullName>MailingState__c</fullName>
    <label>Mailing State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>