force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/MailingStreetAddress__c.field-meta.xml
<CustomField>
    <fullName>MailingStreetAddress__c</fullName>
    <label>Mailing Street Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>