force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/Marketability__c.field-meta.xml
<CustomField>
    <fullName>Marketability__c</fullName>
    <label>Marketability</label>
    <length>255</length>
    <type>Text</type>
</CustomField>