force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/MarketingPreScreen__c.field-meta.xml
<CustomField>
    <fullName>MarketingPreScreen__c</fullName>
    <label>Delinquency Risk</label>
    <length>30</length>
    <type>Text</type>
</CustomField>