force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/MarketingSegmentationCluster__c.field-meta.xml
<CustomField>
    <fullName>MarketingSegmentationCluster__c</fullName>
    <label>Marketing Segmentation Cluster</label>
    <length>80</length>
    <type>Text</type>
</CustomField>