force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/Match_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Match_Confidence__c</fullName>
    <label>Match Confidence</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>