force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/Match_percentage__c.field-meta.xml
<CustomField>
    <fullName>Match_percentage__c</fullName>
    <label>Match %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>