force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/Mfg_Ind__c.field-meta.xml
<CustomField>
    <fullName>Mfg_Ind__c</fullName>
    <label>Mfg. Ind</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>