force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/MinorityOwned__c.field-meta.xml
<CustomField>
    <fullName>MinorityOwned__c</fullName>
    <label>Minority-Owned Indicator</label>
    <length>20</length>
    <type>Text</type>
</CustomField>