force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/NationalId__c.field-meta.xml
<CustomField>
    <fullName>NationalId__c</fullName>
    <label>National Identification Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>