force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/NationalIdType__c.field-meta.xml
<CustomField>
    <fullName>NationalIdType__c</fullName>
    <label>National Identification System</label>
    <length>65</length>
    <type>Text</type>
</CustomField>