force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/NCOA_Move_Date__c.field-meta.xml
<CustomField>
    <fullName>NCOA_Move_Date__c</fullName>
    <label>NCOA Move Date</label>
    <type>Date</type>
</CustomField>