force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/OutOfBusiness__c.field-meta.xml
<CustomField>
    <fullName>OutOfBusiness__c</fullName>
    <label>Out Of Business Indicator</label>
    <length>30</length>
    <type>Text</type>
</CustomField>