force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/Ownership__c.field-meta.xml
<CustomField>
    <fullName>Ownership__c</fullName>
    <label>Ownership</label>
    <length>100</length>
    <type>Text</type>
</CustomField>