force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/OwnOrRent__c.field-meta.xml
<CustomField>
    <fullName>OwnOrRent__c</fullName>
    <label>Location Ownership Indicator</label>
    <length>30</length>
    <type>Text</type>
</CustomField>