force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/Parent_DUNS_Number__c.field-meta.xml
<CustomField>
    <fullName>Parent_DUNS_Number__c</fullName>
    <label>Parent DUNS Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>