force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/ParentOrHqBusinessName__c.field-meta.xml
<CustomField>
    <fullName>ParentOrHqBusinessName__c</fullName>
    <label>Parent Company Business Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>