force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/Physical_Address__c.field-meta.xml
<CustomField>
    <fullName>Physical_Address__c</fullName>
    <label>Physical Address</label>
    <type>TextArea</type>
</CustomField>