force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/PremisesMeasure__c.field-meta.xml
<CustomField>
    <fullName>PremisesMeasure__c</fullName>
    <label>Location Size</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>