force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/PremisesMeasureReliability__c.field-meta.xml
<CustomField>
    <fullName>PremisesMeasureReliability__c</fullName>
    <label>Location Size Accuracy</label>
    <length>64</length>
    <type>Text</type>
</CustomField>