force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/Primary_SIC__c.field-meta.xml
<CustomField>
    <fullName>Primary_SIC__c</fullName>
    <label>Primary SIC</label>
    <length>4</length>
    <type>Text</type>
</CustomField>