force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/Primary_SIC_Description__c.field-meta.xml
<CustomField>
    <fullName>Primary_SIC_Description__c</fullName>
    <label>Primary SIC Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>