force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/PrimaryNaics__c.field-meta.xml
<CustomField>
    <fullName>PrimaryNaics__c</fullName>
    <label>Primary NAICS Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>