force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/PrimaryNaicsDesc__c.field-meta.xml
<CustomField>
    <fullName>PrimaryNaicsDesc__c</fullName>
    <label>Primary NAICS Description</label>
    <length>120</length>
    <type>Text</type>
</CustomField>