force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/PrimarySic8__c.field-meta.xml
<CustomField>
    <fullName>PrimarySic8__c</fullName>
    <label>Primary SIC8 Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>