force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/PriorYearEmployees__c.field-meta.xml
<CustomField>
    <fullName>PriorYearEmployees__c</fullName>
    <label>Prior Year Number of Employees - Total</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>