force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/PriorYearRevenue__c.field-meta.xml
<CustomField>
    <fullName>PriorYearRevenue__c</fullName>
    <label>Prior Year Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>