force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/SalesTurnoverGrowthRate__c.field-meta.xml
<CustomField>
    <fullName>SalesTurnoverGrowthRate__c</fullName>
    <label>Annual Revenue Growth</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>