force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/SecondNaics__c.field-meta.xml
<CustomField>
    <fullName>SecondNaics__c</fullName>
    <label>Second NAICS Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>