force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/SecondNaicsDesc__c.field-meta.xml
<CustomField>
    <fullName>SecondNaicsDesc__c</fullName>
    <label>Second NAICS Description</label>
    <length>120</length>
    <type>Text</type>
</CustomField>