force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/SecondSic__c.field-meta.xml
<CustomField>
    <fullName>SecondSic__c</fullName>
    <label>Second SIC Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>