force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/SecondSicDesc__c.field-meta.xml
<CustomField>
    <fullName>SecondSicDesc__c</fullName>
    <label>Second SIC Description</label>
    <length>80</length>
    <type>Text</type>
</CustomField>