force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/SixthNaics__c.field-meta.xml
<CustomField>
    <fullName>SixthNaics__c</fullName>
    <label>Sixth NAICS Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>