force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/SixthNaicsDesc__c.field-meta.xml
<CustomField>
    <fullName>SixthNaicsDesc__c</fullName>
    <label>Sixth NAICS Description</label>
    <length>120</length>
    <type>Text</type>
</CustomField>