force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/SixthSic8__c.field-meta.xml
<CustomField>
    <fullName>SixthSic8__c</fullName>
    <label>Sixth SIC8 Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>