force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/SixthSic8Desc__c.field-meta.xml
<CustomField>
    <fullName>SixthSic8Desc__c</fullName>
    <label>Sixth SIC8 Description</label>
    <length>80</length>
    <type>Text</type>
</CustomField>