force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/SixthSicDesc__c.field-meta.xml
<CustomField>
    <fullName>SixthSicDesc__c</fullName>
    <label>Sixth SIC Description</label>
    <length>80</length>
    <type>Text</type>
</CustomField>