force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/SmallBusiness__c.field-meta.xml
<CustomField>
    <fullName>SmallBusiness__c</fullName>
    <label>Small Business Indicator</label>
    <length>30</length>
    <type>Text</type>
</CustomField>