force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/Subsidiary_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary_Indicator__c</fullName>
    <label>Subsidiary Indicator</label>
    <length>50</length>
    <type>Text</type>
</CustomField>