force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/Telephone__c.field-meta.xml
<CustomField>
    <fullName>Telephone__c</fullName>
    <label>Telephone</label>
    <type>Phone</type>
</CustomField>