force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/Territory_Covered__c.field-meta.xml
<CustomField>
    <fullName>Territory_Covered__c</fullName>
    <label>Territory Covered</label>
    <length>255</length>
    <type>Text</type>
</CustomField>