force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/ThirdNaics__c.field-meta.xml
<CustomField>
    <fullName>ThirdNaics__c</fullName>
    <label>Third NAICS Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>