force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/ThirdNaicsDesc__c.field-meta.xml
<CustomField>
    <fullName>ThirdNaicsDesc__c</fullName>
    <label>Third NAICS Description</label>
    <length>120</length>
    <type>Text</type>
</CustomField>