force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/ThirdSic8__c.field-meta.xml
<CustomField>
    <fullName>ThirdSic8__c</fullName>
    <label>Third SIC8 Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>