force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/ThirdSic__c.field-meta.xml
<CustomField>
    <fullName>ThirdSic__c</fullName>
    <label>Third SIC Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>