force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/ThirdSicDesc__c.field-meta.xml
<CustomField>
    <fullName>ThirdSicDesc__c</fullName>
    <label>Third SIC Description</label>
    <length>80</length>
    <type>Text</type>
</CustomField>