force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/Ticker_Symbol__c.field-meta.xml
<CustomField>
    <fullName>Ticker_Symbol__c</fullName>
    <label>Ticker Symbol</label>
    <length>100</length>
    <type>Text</type>
</CustomField>