force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/Trade_Name_AKA__c.field-meta.xml
<CustomField>
    <fullName>Trade_Name_AKA__c</fullName>
    <label>Trade Name (AKA)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>