force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/TradeStyle2__c.field-meta.xml
<CustomField>
    <fullName>TradeStyle2__c</fullName>
    <label>Second Tradestyle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>