force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/TradeStyle3__c.field-meta.xml
<CustomField>
    <fullName>TradeStyle3__c</fullName>
    <label>Third Tradestyle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>