force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/TradeStyle4__c.field-meta.xml
<CustomField>
    <fullName>TradeStyle4__c</fullName>
    <label>Fourth Tradestyle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>