force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/Ultimate_DUNS__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_DUNS__c</fullName>
    <description>Ultimate Parent DUNS Number</description>
    <label>Ultimate DUNS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>