force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/UsTaxId__c.field-meta.xml
<CustomField>
    <fullName>UsTaxId__c</fullName>
    <label>US Tax ID Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>