force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/WomenOwned__c.field-meta.xml
<CustomField>
    <fullName>WomenOwned__c</fullName>
    <label>Woman-Owned Indicator</label>
    <length>40</length>
    <type>Text</type>
</CustomField>