force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/X3_Yr_Sales_Growth__c.field-meta.xml
<CustomField>
    <fullName>X3_Yr_Sales_Growth__c</fullName>
    <label>3 Yr % Sales Growth</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>