force-app/main/default/objects/Dun_and_Bradstreet_Company__c/fields/Year_Started__c.field-meta.xml
<CustomField>
    <fullName>Year_Started__c</fullName>
    <label>Year Started</label>
    <length>4</length>
    <type>Text</type>
</CustomField>